prod/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-preview
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30300
  type: NodePort
